<resources>
    <string name="app_name">Movie Displayer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_movie_favorite">Favorite</string>

    <string name="action_trailer_launch_web">Watch trailer on internet</string>
    <string name="action_trailer_launch_youtube">Watch trailer on YouTube</string>
    <string name="action_trailer_share">Share</string>

    <string name="action_review_launch_web">Read on internet</string>
    <string name="action_review_share">Share</string>

    <string name="pref_sort_option_mPopular_label">Most Popular</string>
    <string name="pref_sort_option_mTopRate_label">Top Rated</string>
    <string name="pref_sort_option_mFavorite_movie_label">Favorite Movies</string>
    <string name="pref_sort_option_label">Sort Options</string>

    <string name="pref_sort_option_key" translatable="false">sort_option</string>
    <string name="pref_sort_option_default" translatable="false">movie/popular</string>

    <string name="pref_sort_option_mPopular">movie/popular</string>
    <string name="pref_sort_option_mTopRate">movie/top_rated</string>
    <string name="pref_sort_option_mFavorite_movie">favorite_movie</string>

    <string-array name="pref_sort_option">
        <item>@string/pref_sort_option_mPopular_label</item>
        <item>@string/pref_sort_option_mTopRate_label</item>
        <item>@string/pref_sort_option_mFavorite_movie_label</item>
    </string-array>

    <string-array name="pref_sort_option_value">
        <item>@string/pref_sort_option_mPopular</item>
        <item>@string/pref_sort_option_mTopRate</item>
        <item>@string/pref_sort_option_mFavorite_movie</item>
    </string-array>

    <string name="detail_title_label">Movie Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Detail Activity</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">popularmoviev2.example.com</string>
    <string name="content_authority">com.example.andriod.popularmoviev2</string>

</resources>
